--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500;1,600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.svg">
   <title> Escola DNC - Landing Page </title>
 </head>
 <body>
